--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,21 @@
 * {
-  margin: 0;
-  padding: 0;
-  border: 0; 
-  outline: 0;
-  box-sizing: content-box;
-  text-decoration: none;  
-  }
+margin: 0;
+padding: 0;
+border: 0; 
+outline: 0;
+box-sizing: content-box;
+text-decoration: none;  
+}
 
 @font-face{
-  src: url(../Font/d-din/D-DIN-Bold.otf);
-  font-family: "DIN-Bold";
-  font-weight: normal;
+src: url(../font/d-din/D-DIN-Bold.otf);
+font-family: "DIN-Bold";
+font-weight: normal;
 }
 @font-face{
-  src: url(../Font/Helvetica-Font/Helvetica.ttf);
-  font-family:"Helvetica-Regular";
-  font-weight: normal;
+src: url(../font/Helvetica-Font/Helvetica.ttf);
+font-family:"Helvetica-Regular";
+font-weight: normal;
 }
 
 .text-bold{
@@ -26,324 +26,274 @@ font-family: Helvetica-Regular;
 } 
 
 :root{
-  --bg-footer: hsl(0, 0%, 0%);
-  --color-blue: hsl(228, 50%, 41%);
-  --bg-purple:hsl(283, 34%, 40%);
-  --bg-white: hsl(0, 0%, 100%);
-  --color-grey:hsl(0, 0%, 44%);
-  --color-red:hsl(354, 70%, 54%);
+--bg-footer: hsl(0, 0%, 0%);
+--color-blue: hsl(228, 50%, 41%);
+--bg-purple:hsl(283, 34%, 40%);
+--bg-white: hsl(0, 0%, 100%);
+--color-grey:hsl(0, 0%, 44%);
+--color-red:hsl(354, 70%, 54%);
 }
 body a:hover{
-  text-decoration: none;
+text-decoration: none;
 }
 .Header{
-  background-color: var(--bg-footer);
- }
+background-color: var(--bg-footer);
+}
 .Header header .logo{
-  width: 5em;
+width: 5em;
 }
 .Header .btn-menu {
-  background: var(--bg-white);
+background: var(--bg-white);
 }
 
 /*Seccion 1*/
 body .banner{
-  background-image: url(../Img/bg/bg_banner.jpg);
-  background-repeat: no-repeat;
-  background-size:cover;
+background-image: url(../img/bg/bg_banner.jpg);
+background-repeat: no-repeat;
+background-size:auto;
+display: flex;
+justify-items: center;
+justify-content:center ;
+padding: 2em;
 }
-body .banner .container{
-  margin: 5em 5em;  
+body .banner h1{
+font-size: 60px;
+margin-top: 1em;   
 }
- body .banner .container h1{
-   font-size: 5em;
- }
- body .banner .container a{
-  font-size: 2em;
-  background: var(--color-red);
-  border-radius:4em;
-  margin: 2em 0 4em 0;  
-  padding: 0.5em 2em;
+body .banner  a{
+font-size: 2em;
+background: var(--color-red);
+border-radius:4em;
+margin: 2em 0 4em 0;  
+padding: 0.5em 2em;
 }
-body .banner img{
-  z-index: 1;
-}
+
 
 /*seccion 2*/
 body .about {
-  margin: 5em 0;  
+margin: 5em 0 ;  
 }
 body .about .content_about {
-  justify-content: center;
-  align-items: center;
+justify-content: center;
+align-items: center;
 }
 body .about .content_about h1{
-  font-size: 5em;
-  margin-bottom: 0.2em;
+font-size: 5em;
+margin-bottom: 0.2em;
 }
 body .about .content_about p{
-  font-size: 18px;
-  margin-bottom: 1em;
+font-size: 18px;
+margin-bottom: 1em;
 }
 body .about .container article .btn_leer{
-  font-size: 1em;
-  background: var(--color-red);
-  border-radius:4em;
+font-size: 1em;
+background: var(--color-red);
+border-radius:4em;
 }
 
 
 /*seccion3*/
 .personage {
- background-image: url(../img/bg/bg-personages002.jpg);
- background-repeat:repeat-y;
- margin-top: 12em;
- margin-bottom: 5em;
+background-image: url(../img/bg/bg-personages002.jpg);
+background-repeat:repeat-y;
+margin-top: 12em;
+margin-bottom: 5em;
 }
 body .personage h1{
-  margin-top: 1em;
-  font-size: 5em;  
+margin-top: 1em;
+font-size: 5em;  
 }
 body .personage .parrafo{
- font-size: 1.5em;  
+font-size: 1.5em;  
 }
 body .personage img {
-  width: 15em;
+width: 15em;
 }
 body .personage article button {
-  background-color: transparent;
-  border: transparent;
-  margin: 1em;
+background-color: transparent;
+border: transparent;
+margin: 1em;
 }
 body .personage article button:hover {
-  background-color: var(--bg-white);
-  border: none;
-  border-radius: 2em;  
+background-color: var(--bg-white);
+border: none;
+border-radius: 2em;  
 }
 
 /*seccion 4*/
 body .team img {
-  width: 12em;
+width: 12em;
 }
 body .team h1 {
-  font-size: 4em;
-  color: var(--color-blue);
+font-size: 4em;
+color: var(--color-blue);
 }
 body .team article{
-  margin: 0.5em 5em;
+margin: 0.5em 5em;
 }
 
 /*contact*/
 .btn-contact {
-  background: var(--color-red);
+background: var(--color-red);
 }
 .iconContact {
-  border-radius: 100%;
-  width: 70px;
-  height: 70px;
-  background: var(--color-red);
-  position: fixed;
-  bottom: 100px;
-  right: 50px;
-  z-index: 10;  
+border-radius: 100%;
+width: 70px;
+height: 70px;
+background: var(--color-red);
+position: fixed;
+bottom: 100px;
+right: 50px;
+z-index: 10;  
 }
 .Contact_content{ 
-  position: fixed;
-  bottom: 5em;
-  right: -50em;
-  z-index: 20;
+position: fixed;
+bottom: 5em;
+right: -50em;
+z-index: 20;
 } 
 .privacidad{
-  color:var(--color-red);
+color:var(--color-red);
 }
 
 /*footer*/
 .footer{
-  background-color: var(--bg-footer);
+background-color: var(--bg-footer);
 }
 
 
 
 
 @media only screen and (min-width: 1024px) and (max-width: 1040px) {
- 
-    /*Seccion 1*/  
- 
-   body .banner .container h1{
-     font-size: 4em;
-   }
-   body .banner .container a{    
-    margin-top: 1em;
-    padding: 0.4em 1.9em;
-  }
-  /*seccion 2*/
-  body .about {
-    margin: 5em 0;  
-  }
-  body .about .content_about {
-    margin: 0 5em;
-    text-align: justify;
-    
-  }
-  body .about .content_about h1{
-    font-size: 4em;
-  }
-  body .about .content_about p{
-    font-size: 14px;
-    margin-bottom: 1.5em;
-  }
-  body .about .container article .btn_leer{
-    font-size: 1.5em;
-  }
-  
+
+body .banner h1{
+font-size: 50px;
+margin-top: 4em;
 }
-  @media only screen and (min-width: 768px) and (max-width: 1024px) {
- 
- /*Seccion 1*/
-
-
-
- body .banner .container h1{
-   font-size: 3em;
- }
- body .banner .container a{
-  font-size: 1.5em;
-  margin-top: 1em;
-  padding: 0.5em 2em;
+body .banner  a{
+font-size: 2em;
+background: var(--color-red);
+border-radius:4em;
+margin: 2em 0 4em 0;  
+padding: 0.5em 2em;
 }
 
 /*seccion 2*/
-
+body .about {
+margin: 5em 0;  
+}
 body .about .content_about {
-  flex-direction: column-reverse;
-  text-align: justify;
+margin: 0 5em;
+text-align: justify;    
 }
-body .about .content_about article{
-  text-align: center;
+body .about .content_about h1{
+font-size: 4em;
 }
-body .about .content_about p{  
-  margin-bottom: 2.5em;
+body .about .content_about p{
+font-size: 14px;
+margin-bottom: 1.5em;
 }
 body .about .container article .btn_leer{
-  font-size: 1.5em;
+font-size: 1.5em;
+}
+
+/*seccion 4*/
+body .team img {
+width: 10em;
+}
+body .team article{
+margin: 0.5em 3em;
+}  
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1024px) {
+
+	body h1{
+	font-size: 30px;
+	}
+	.Header .btn-menu {
+	margin: 0 2em 0 0;
+	}
+	
+	/*Seccion 1*/
+	body .banner  a{
+	font-size: 1.5em;  
+	margin: 2em 0 2em 0;  
+	padding: 0.5em 1.5em;
+	}
+	/*seccion 2*/
+	body .about .content_about {
+	flex-direction: column-reverse;
+	text-align: justify;
+	}
+
+	body .about .content_about article{
+	text-align: center;
+	}
+	body .about .content_about p{  
+	margin-bottom: 2.5em;
+	}
+	body .about .container article .btn_leer{
+	font-size: 1.5em;
+	}
+	
+	/*seccion 4*/
+	body .team img {
+	width:10em;
+	}
+	body .team{
+	text-align: center;
+	}
+	body .team article{
+	margin: 0.5em 2em;  
+	}
+	}
+	
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+
+body h1{
+font-size: 30px;
+}
+.Header .btn-menu {
+margin: 0 2em 0 0;
+}
+
+/*Seccion 1*/
+body .banner  a{
+font-size: 1.5em;  
+margin: 2em 0 2em 0;  
+padding: 0.5em 1.5em;
+}
+/*seccion 2*/
+body .about .content_about {
+flex-direction: column-reverse;
+text-align: justify;
+}
+body .about video {
+width: 400px;
+height: auto;
+}
+body .about .content_about article{
+text-align: center;
+}
+body .about .content_about p{  
+margin-bottom: 2.5em;
+}
+body .about .container article .btn_leer{
+font-size: 1.5em;
+}
+
+/*seccion 4*/
+body .team img {
+width: 8em;
+}
+body .team{
+text-align: center;
+}
+body .team .row{
+flex-direction: column;	}
+body .team article{
+margin: 0.5em 3em;  
 }
 }
 
-@media only screen and (min-width: 425px) and (max-width: 768px) {
- 
-  
-  .Header header .logo{
-    width: 6em;
-  }
-  .Header .btn-menu {
-    background: var(--bg-white);
-    margin-right: 2em;
-  }
-  
-  /*Seccion 1*/
-  
-   body .banner .container h1{
-     font-size: 1.7em;
-   }
-   body .banner .container a{
-    font-size: 1em;
-    background: var(--color-red);
-    border-radius:4em;
-    margin-top: 0.5em;
-   
-  }
-  body .banner img{
-    z-index: 1;
-  }
-  
-  /*seccion 2*/
-  body .about {
-    margin: 5em 0;  
-  }
-  body .about .content_about {
-    justify-content: center;
-    align-items: center;
-  }
-  body .about .content_about h1{
-    font-size: 5em;
-    margin-bottom: 0.2em;
-  }
-  body .about .content_about p{
-    font-size: 18px;
-    margin-bottom: 1em;
-  }
-  body .about .container article .btn_leer{
-    font-size: 1em;
-    background: var(--color-red);
-    border-radius:4em;
-  }
-  
-  
-  /*seccion3*/
-  .personage {
-   background-image: url(../img/bg/bg-personages002.jpg);
-   background-repeat:repeat-y;
-   margin-top: 12em;
-   margin-bottom: 5em;
-  }
-  body .personage h1{
-    margin-top: 1em;
-    font-size: 5em;  
-  }
-  body .personage .parrafo{
-   font-size: 1.5em;  
-  }
-  body .personage img {
-    width: 15em;
-  }
-  body .personage article button {
-    background-color: transparent;
-    border: transparent;
-    margin: 1em;
-  }
-  body .personage article button:hover {
-    background-color: var(--bg-white);
-    border: none;
-    border-radius: 2em;  
-  }
-  
-  /*seccion 4*/
-  body .team img {
-    width: 12em;
-  }
-  body .team h1 {
-    font-size: 4em;
-    color: var(--color-blue);
-  }
-  body .team article{
-    margin: 0.5em 5em;
-  }
-  
-  /*contact*/
-  .btn-contact {
-    background: var(--color-red);
-  }
-  .iconContact {
-    border-radius: 100%;
-    width: 70px;
-    height: 70px;
-    background: var(--color-red);
-    position: fixed;
-    bottom: 100px;
-    right: 50px;
-    z-index: 10;  
-  }
-  .Contact_content{ 
-    position: fixed;
-    bottom: 5em;
-    right: -50em;
-    z-index: 20;
-  } 
-  .privacidad{
-    color:var(--color-red);
-  }
-  
-  /*footer*/
-  .footer{
-    background-color: var(--bg-footer);
-  }
-}
