--- a/styles/lectura.css
+++ b/styles/lectura.css
@@ -8,12 +8,12 @@
   }
 
 @font-face{
-  src: url(../Font/d-din/D-DIN-Bold.otf);
+  src: url(../font/d-din/D-DIN-Bold.otf);
   font-family: "DIN-Bold";
   font-weight: normal;
 }
 @font-face{
-  src: url(../Font/Helvetica-Font/Helvetica.ttf);
+  src: url(../font/Helvetica-Font/Helvetica.ttf);
   font-family:"Helvetica-Regular";
   font-weight: normal;
 }
