--- a/styles/main.css
+++ b/styles/main.css
@@ -94,7 +94,7 @@ border-radius:4em;
 
 /*seccion3*/
 .personage {
-background-image: url(../img/bg/bg-personages002.jpg);
+background-image: url(../img/bg/bg-personages.jpg);
 background-repeat:repeat-y;
 margin-top: 12em;
 margin-bottom: 5em;
