--- a/styles/recursoscomic.css
+++ b/styles/recursoscomic.css
@@ -36,7 +36,7 @@
 }
 
 body {   
-    background:url(../img/bg/bg_comic.png);
+    background:url(../img/bg/bg-body.jpg);
     background-repeat: no-repeat;
 }
 body a:hover{
