--- a/styles/comic.css
+++ b/styles/comic.css
@@ -12,20 +12,20 @@
   font-family: "DIN-Bold";
   font-weight: normal;
   }
-  @font-face{
+@font-face{
   src: url(../font/Helvetica-Font/Helvetica.ttf);
   font-family:"Helvetica-Regular";
   font-weight: normal;
   }
-  
-  .text-bold{
+
+.text-bold{
   font-family: DIN-Bold;
   }
-  .parrafo{
+.parrafo{
   font-family: Helvetica-Regular;
   } 
-  
-  :root{
+
+:root{
   --bg-footer: hsl(0, 0%, 0%);
   --color-blue: hsl(228, 50%, 41%);
   --bg-purple:hsl(283, 34%, 40%);
@@ -34,128 +34,40 @@
   --color-red:hsl(354, 70%, 54%);
   --color-blue-light:hsl(202, 67%, 57%);
   }
-  body a:hover{
+
+body a:hover{
   text-decoration: none;
   }
-/*
-body,
-html {
-  font-size: 100%;
-  padding: 0;
-  margin: 0;
-}
-*/
-/*
+
 *,
 *:after,
 *:before {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-*/
+  }
 
 .clearfix:before,
 .clearfix:after {
   content: " ";
   display: table;
-}
+  }
 
 .clearfix:after {
   clear: both;
-}
-
+  }
 
 .clearfix {
   background-color: var(--bg-footer);
   }
-  .clearfix  .logo{
+  
+.clearfix  .logo{
   width: 5em;
   }
-  .clearfix .btn-menu {
+  
+.clearfix .btn-menu {
   background: var(--bg-white);
   }
-
-/*
-body {
-  font-family: "Lato", Calibri, Arial, sans-serif;
-  color: #47a3da;
-}*/
-/*
-a {
-  color: #f0f0f0;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #000;
-}*/
-/*
-.main,
-.container > header {
-  width: 90%;
-  max-width: 70em;
-  margin: 0 auto;
-padding: 0 1.875em 3.125em 1.875em;
-}*/
-/*
-.container > header {
-  padding: 2.875em 1.875em 1.875em;
-}
-
-.container > header h1 {
-  font-size: 2.125em;
-  line-height: 1.3;
-  margin: 0;
-  float: left;
-  font-weight: 400;
-}
-
-.container > header span {
-  display: block;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.5em;
-  padding: 0 0 0.6em 0.1em;
-}
-
-.container > header nav {
-  float: right;
-}
-
-.container > header nav a {
-  display: block;
-  float: left;
-  position: relative;
-  width: 2.5em;
-  height: 2.5em;
-  background: #fff;
-  border-radius: 50%;
-  color: transparent;
-  margin: 0 0.1em;
-  border: 4px solid #47a3da;
-  text-indent: -8000px;
-}
-
-.container > header nav a:after {
-  content: attr(data-info);
-  color: #47a3da;
-  position: absolute;
-  width: 600%;
-  top: 120%;
-  text-align: right;
-  right: 0;
-  opacity: 0;
-  pointer-events: none;
-}
-
-.container > header nav a:hover:after {
-  opacity: 1;
-}
-
-.container > header nav a:hover {
-  background: #47a3da;
-}*/
 
 .icon-drop:before,
 .icon-arrow-left:before {
@@ -173,85 +85,88 @@ padding: 0 1.875em 3.125em 1.875em;
   -webkit-font-smoothing: antialiased;
   text-indent: 8000px;
   padding-left: 8px;
-}
-/*
-.container > header nav a:hover:before {
-  color: #fff;
-}*/
+  }
 
 .icon-drop:before {
   content: "\e000";
-}
+  }
 
 .icon-arrow-left:before {
   content: "\f060";
-}
+  }
 
 
 .contenido__video{
-	background: #7DD174;
-	overflow: hidden;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: -1;
-    }
-   
-   
-  .video{
-	position: absolute;
-	max-width: 300%;
-	width: 100%;
-   }
-     
-   
+  background: #7DD174;
+  overflow: hidden;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1; 
+  }
+
+.video{
+  position: absolute;
+  max-width: 300%;
+  width: 100%;  
+  }
+  
+
 .despega{	
-	margin: 0%;
-	padding: 10px;
-	text-align: center;
-	justify-content: center;
-	justify-items: center;
-	color: var(--bg-white);
-	background-color: var(--color-red);
-	border-color: transparent;
-	border-radius: 30px;
-	width: 15em;
-	height: 3em;
-}
+  margin: 0%;
+  padding: 10px;
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
+  color: var(--bg-white);
+  background-color: var(--color-red);
+  border-color: transparent;
+  border-radius: 30px;
+  width: 15em;
+  height: 3em;
+  }
 
 .despega:hover{	
-	margin: 0%;
-	padding: 10px;
-	text-align: center;
-	justify-content: center;
-	justify-items: center;
-	color: var(--bg-white);
-	background-color: var(--color-blue);
-	border-color: transparent;
-	border-radius: 30px;
-	width: 15em;
-	height: 3em;
+  margin: 0%;
+  padding: 10px;
+  text-align: center;
+  justify-content: center;
+  justify-items: center;
+  color: var(--bg-white);
+  background-color: var(--color-blue);
+  border-color: transparent;
+  border-radius: 30px;
+  width: 15em;
+  height: 3em;
+  }
+
+
+
+@media (max-width: 900px) and (min-width: 650px) {
+  .video{
+    max-width: 300%;
+    width: 300%;  
+    }
+    
+  .video_responsive video {
+    width: 400px ;
+    height: 400px;
+  }
+}
+@media(max-width: 650px) and (min-width: 480px){
+  .video{
+    max-width: 300%;
+    width: 300%;  
+    }
+    
+  .video_responsive video {
+    width: 500px ;
+    height: 500px;
+  }
 }
 
-
-
-@media(max-width: 900px){
-	.video{
-	 width: 150%;
-	}
-   }
-   @media(max-width: 650px){
-	.video{
-	 width: 280%;
-	}
-   }
-   @media(max-width: 480px){
-	.video{ 
-	 width: 300%;
-	}
-   }
 
 
 
