--- a/styles/component.css
+++ b/styles/component.css
@@ -1,3 +1,12 @@
+:root{
+	--bg-footer: hsl(0, 0%, 0%);
+	--color-blue: hsl(228, 50%, 41%);
+	--bg-purple:hsl(283, 34%, 40%);
+	--bg-white: hsl(0, 0%, 100%);
+	--color-grey:hsl(0, 0%, 44%);
+	--color-red:hsl(354, 70%, 54%);
+	--color-blue-light:hsl(202, 67%, 57%);
+	}
 .cbp-fwslider {
 	position: relative;
 	margin: 0 0 10px;
@@ -35,6 +44,7 @@
 	display: block;
 	margin: 0 auto;
 	max-width: 75%;
+	margin-bottom: 2em;
 }
 
 .cbp-fwslider nav span {
@@ -42,18 +52,19 @@
 	top: 50%;
 	width: 50px;
 	height: 100px;
-	background: #34489d;
-	color: #fff;
+	background: var(--color-blue);
+	color: var(--bg-white);
 	font-size: 50px;
 	text-align: center;
 	margin-top: -50px;
 	line-height: 100px;
 	cursor: pointer;
 	font-weight: normal;
+	
 }
 
 .cbp-fwslider nav span:hover {
-	background: #ee3d3d;
+	background:var(--color-red) ;
 }
 
 .cbp-fwslider nav span.cbp-fwnext {
@@ -76,20 +87,21 @@
 	display: inline-block;
 	width: 18px;
 	height: 18px;
-	background: #ddd;
+	background: var(--bg-white);
 	margin: 4px;
 	border-radius: 50%;
 	cursor: pointer;
 }
 
 .cbp-fwdots span:hover {
-	background: #999;
+	background: var(--color-grey);
 }
 
 .cbp-fwdots span.cbp-fwcurrent {
-	background: #47a3da;
-	box-shadow: 0 0 0 2px #47a3da;
+	background: var(--color-blue-light);
+	box-shadow: 0 0 0 2px var(--color-blue-light);
 	-webkit-transition: box-shadow 0.2s ease-in-out;
 	-moz-transition: box-shadow 0.2s ease-in-out;
 	transition: box-shadow 0.2s ease-in-out;
 }
+
